--- a/Final/templates/welcome.html
+++ b/Final/templates/welcome.html
@@ -4,8 +4,8 @@
     </head>
 
     <body>
-        <!--This is the host page, the other pages extend off of it. It has the title Mad Lib Generator-->
-        <h1>Mad Lib Generator!</h1>
+        
+        <h1>Mad Libs!</h1>
         <br />
         {% block content %}
         {% endblock %}
